test/tasty/neg-isolated/src-2/TestMethodDeps.check
TestMethodDeps_fail.scala:5: error: can't find type in signature of method parent: tastytest.Parent; perhaps it is missing from the classpath.
  def test = MethodDeps.parent
                        ^
1 error
